--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 
 		</div>
 		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-			<h1 class="page-header">Dashboard</h1>
+
 			<div ng-view></div>
 
 
@@ -60,5 +60,6 @@
 <script src="in_theaters/controller.js"></script>
 <script src="coming_soon/controller.js"></script>
 <script src="top250/controller.js"></script>
+<script src="services/jsonp.js"></script>
 </body>
 </html>
