--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" href="app.css">
 </head>
-<body ng-app="myApp">
+<body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
 		<div class="navbar-header">
@@ -38,10 +38,10 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-3 col-md-2 sidebar">
-			<ul class="nav nav-sidebar">
-				<li class="active"><a href="#/in_theaters">正在上映</a></li>
-				<li><a href="#/coming_soon">即将上映</a></li>
-				<li><a href="#/top250">TOP</a></li>
+			<ul class="nav nav-sidebar" ng-controller="appController">
+				<li ng-class="{active:type=='in_theaters'}"><a href="#/in_theaters/1">正在热映</a></li>
+				<li ng-class="{active:type=='coming_soon'}"><a href="#/coming_soon/1">即将上映</a></li>
+				<li ng-class="{active:type=='top250'}"><a href="#/top250/1">TOP</a></li>
 			</ul>
 
 		</div>
@@ -57,9 +57,9 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="app.js"></script>
-<script src="in_theaters/controller.js"></script>
-<script src="coming_soon/controller.js"></script>
-<script src="top250/controller.js"></script>
+<!--主模块-->
+<script src="movie_list/controller.js"></script>
+<!--跨域jsonp自定义模块-->
 <script src="services/jsonp.js"></script>
 </body>
 </html>
