--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN" ng-app="myApp">
+<html lang="zh-CN">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" href="app.css">
 </head>
-<body>
+<body  ng-app="myApp" ng-controller="appController">
 <nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
 		<div class="navbar-header">
@@ -24,12 +24,9 @@
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#">Dashboard</a></li>
-				<li><a href="#">Settings</a></li>
-				<li><a href="#">Profile</a></li>
-				<li><a href="#">Help</a></li>
 			</ul>
-			<form class="navbar-form navbar-right">
-				<input type="text" class="form-control" placeholder="Search...">
+			<form class="navbar-form navbar-right" ng-submit="search()">
+				<input type="text" class="form-control" placeholder="Search..." ng-model="input">
 			</form>
 		</div>
 	</div>
@@ -38,7 +35,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-3 col-md-2 sidebar">
-			<ul class="nav nav-sidebar" ng-controller="appController">
+			<ul class="nav nav-sidebar" >
 				<li ng-class="{active:type=='in_theaters'}"><a href="#/in_theaters/1">正在热映</a></li>
 				<li ng-class="{active:type=='coming_soon'}"><a href="#/coming_soon/1">即将上映</a></li>
 				<li ng-class="{active:type=='top250'}"><a href="#/top250/1">TOP</a></li>
