详细页面，$loaction解决$route详页中无法搜索的bug

--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
 <script src="app.js"></script>
 <!--主模块-->
 <script src="movie_list/controller.js"></script>
+<script src="movie_details/controller.js"></script>
 <!--跨域jsonp自定义模块-->
 <script src="services/jsonp.js"></script>
 </body>
